--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title>Simulado ENADE Dom Pedro</title>
+    <title>Simulado ENADE Dom </title>
 </head>
 <body>
 
